# symbrim

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.benchmarks/: baseline.json
.github/: release-drafter.yml
.github/workflows/: coverage.yaml  deploy.yaml  lint.yaml  release.yml  test-pypi.yml  tests.yaml
_autosummary/: symbrim.bicycle.bicycle_base.BicycleBase.html  symbrim.bicycle.bicycle_base.html  symbrim.bicycle.cranks.CranksBase.html  symbrim.bicycle.cranks.MasslessCranks.html  symbrim.bicycle.cranks.html  symbrim.bicycle.front_frames.FrontFrameBase.html  symbrim.bicycle.front_frames.RigidFrontFrame.html  symbrim.bicycle.front_frames.RigidFrontFrameMoore.html  symbrim.bicycle.front_frames.SuspensionRigidFrontFrame.html  symbrim.bicycle.front_frames.SuspensionRigidFrontFrameMoore.html  symbrim.bicycle.front_frames.html  symbrim.bicycle.grounds.FlatGround.html  symbrim.bicycle.grounds.GroundBase.html  symbrim.bicycle.grounds.html  symbrim.bicycle.html  symbrim.bicycle.rear_frames.RearFrameBase.html  symbrim.bicycle.rear_frames.RigidRearFrame.html  symbrim.bicycle.rear_frames.RigidRearFrameMoore.html  symbrim.bicycle.rear_frames.html  symbrim.bicycle.stationary_bicycle.StationaryBicycle.html  symbrim.bicycle.stationary_bicycle.html  symbrim.bicycle.tires.InContactTire.html  symbrim.bicycle.tires.NonHolonomicTire.html  symbrim.bicycle.tires.TireBase.html  symbrim.bicycle.tires.html  symbrim.bicycle.wheels.KnifeEdgeWheel.html  symbrim.bicycle.wheels.ToroidalWheel.html  symbrim.bicycle.wheels.WheelBase.html  symbrim.bicycle.wheels.html  symbrim.bicycle.whipple_bicycle.WhippleBicycle.html  symbrim.bicycle.whipple_bicycle.WhippleBicycleMoore.html  symbrim.bicycle.whipple_bicycle.html  symbrim.brim.base_connections.HandGripsBase.html  symbrim.brim.base_connections.PedalsBase.html  symbrim.brim.base_connections.SeatBase.html  symbrim.brim.base_connections.html  symbrim.brim.bicycle_rider.BicycleRider.html  symbrim.brim.bicycle_rider.html  symbrim.brim.hand_grips.HolonomicHandGrips.html  symbrim.brim.hand_grips.SpringDamperHandGrips.html  (+122 more)
_downloads/7090eddf54a353c35a362c26fb20a7df/: tutorials_environment.yml
_sources/: api_reference.rst.txt  index.rst.txt
_sources/_autosummary/: symbrim.bicycle.bicycle_base.BicycleBase.rst.txt  symbrim.bicycle.bicycle_base.rst.txt  symbrim.bicycle.cranks.CranksBase.rst.txt  symbrim.bicycle.cranks.MasslessCranks.rst.txt  symbrim.bicycle.cranks.rst.txt  symbrim.bicycle.front_frames.FrontFrameBase.rst.txt  symbrim.bicycle.front_frames.RigidFrontFrame.rst.txt  symbrim.bicycle.front_frames.RigidFrontFrameMoore.rst.txt  symbrim.bicycle.front_frames.SuspensionRigidFrontFrame.rst.txt  symbrim.bicycle.front_frames.SuspensionRigidFrontFrameMoore.rst.txt  symbrim.bicycle.front_frames.rst.txt  symbrim.bicycle.grounds.FlatGround.rst.txt  symbrim.bicycle.grounds.GroundBase.rst.txt  symbrim.bicycle.grounds.rst.txt  symbrim.bicycle.rear_frames.RearFrameBase.rst.txt  symbrim.bicycle.rear_frames.RigidRearFrame.rst.txt  symbrim.bicycle.rear_frames.RigidRearFrameMoore.rst.txt  symbrim.bicycle.rear_frames.rst.txt  symbrim.bicycle.rst.txt  symbrim.bicycle.stationary_bicycle.StationaryBicycle.rst.txt  symbrim.bicycle.stationary_bicycle.rst.txt  symbrim.bicycle.tires.InContactTire.rst.txt  symbrim.bicycle.tires.NonHolonomicTire.rst.txt  symbrim.bicycle.tires.TireBase.rst.txt  symbrim.bicycle.tires.rst.txt  symbrim.bicycle.wheels.KnifeEdgeWheel.rst.txt  symbrim.bicycle.wheels.ToroidalWheel.rst.txt  symbrim.bicycle.wheels.WheelBase.rst.txt  symbrim.bicycle.wheels.rst.txt  symbrim.bicycle.whipple_bicycle.WhippleBicycle.rst.txt  symbrim.bicycle.whipple_bicycle.WhippleBicycleMoore.rst.txt  symbrim.bicycle.whipple_bicycle.rst.txt  symbrim.brim.base_connections.HandGripsBase.rst.txt  symbrim.brim.base_connections.PedalsBase.rst.txt  symbrim.brim.base_connections.SeatBase.rst.txt  symbrim.brim.base_connections.rst.txt  symbrim.brim.bicycle_rider.BicycleRider.rst.txt  symbrim.brim.bicycle_rider.rst.txt  symbrim.brim.hand_grips.HolonomicHandGrips.rst.txt  symbrim.brim.hand_grips.SpringDamperHandGrips.rst.txt  (+122 more)
_sources/guides/: index.rst.txt  introduction.rst.txt
_sources/tutorials/: index.rst.txt  rolling_disc_from_scratch.ipynb.txt
benchmarks/: README.md  conftest.py  test_rolling_disc.py  test_whipple_bicycle.py
contributing/: index.html
docs/: api_reference.rst  conf.py  conf.py.bak  index.rst  process_tutorials.py  references.bib
docs/contributing/: index.rst
docs/guides/: component_implementation.rst  index.rst  installation.rst  introduction.rst
docs/tutorials/: README.md  four_bar_linkage.ipynb  index.rst  my_first_bicycle.ipynb  rolling_disc_from_scratch.ipynb  simulator.py  tutorials_environment.yml  utils.py
docs/user_guide/: index.rst  installation.rst  introduction.rst
guides/: component_implementation.html  index.html  installation.html  introduction.html
src/brim/: __init__.py  bicycle_base.py  model_base.py
src/symbrim/: __init__.py
tests/: conftest.py  test_bicycle_base.py
tests/bicycle/: test_front_frames.py  test_grounds.py  test_pedals.py  test_rear_frames.py  test_stationary_bicycle.py  test_tire_models.py  test_tires.py  test_tyre_models.py  test_wheels.py  test_whipple_bicycle.py
tests/brim/: test_bicycle_rider.py  test_hand_grips.py  test_pedal_connections.py  test_pedals.py  test_seat_connections.py  test_seats.py  test_steer_connections.py  test_steers.py
tests/core/: test_attachment.py  test_auxiliary.py  test_base_classes.py  test_mixins.py  test_model_base.py  test_registry.py  test_requirement.py  test_singleton.py
tests/other/: test_rolling_disc.py
tests/rider/: test_arms.py  test_hip_joints.py  test_legs.py  test_pelvis.py  test_pelvis_to_torso.py  test_rider.py  test_rider_lean.py  test_sacrums.py  test_schoulder_joints.py  test_torso.py
tests/test_bicycle/: test_tires.py  (+5 more)
tutorials/: index.html  rolling_disc_from_scratch.html  rolling_disc_from_scratch.ipynb
(+114 files in other folders)
