[tool.poetry]
name = "brim"
version = "0.0.1"
description = "A Modular and Extensible Open-Source Framework for Creating Bicycle-Rider Models"
authors = ["TJStienstra <T.J.Stienstra@student.tudelft.nl>"]
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/mechmotum/brim"

[tool.poetry.dependencies]
python = "^3.8"
sympy = {git = "https://github.com/sympy/sympy.git"}
symmeplot = {git = "https://github.com/TJStienstra/symmeplot.git", optional = true}
bicycleparameters = {git = "https://github.com/moorepants/BicycleParameters.git", optional = true}
plotly = {version = "^5.14.1", optional = true}
pandas = {version = "^2.0.0", optional = true}

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.262"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
coverage = {extras = ["toml"], version = "^7.2.1"}
pytest-cov = "^4.0.0"
numpy = "^1.24.2"
pytest-benchmark = "^4.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.1"
furo = "^2023.3.27"
sphinxcontrib-bibtex = "^2.5.0"
nbsphinx = "^0.9.3"
rpds-py = "^0.10.3"
ipykernel = "^6.25.2"
nbstripout = "^0.6.1"

[tool.poetry.extras]
plotting = ["symmeplot"]
parametrize = ["bicycleparameters", "plotly", "pandas"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["A", "B", "C", "D", "E", "F", "I", "N", "Q", "W", "NPY", "RUF", "SIM", "TID",
          "T20", "UP"]
ignore = ["A003", "C901", "D105", "D203", "D213"]
show-source = true

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]
"benchmarks/*" = ["D", "S101"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.8"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["brim"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "with contextlib.suppress.ImportError.:",
    "def get_param_values",
    "def set_plot_objects"
]
omit = [
    "src/brim/utilities/benchmarking.py",
    "src/brim/utilities/parametrize.py",
    "src/brim/utilities/plotting.py",
    "src/brim/utilities/testing.py"
]
