[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "symbrim"
dynamic = ["version"]
authors = [
  { name = "tjstienstra", email = "timostienstra00@gmail.com" },
]
description = "A Modular and Extensible Open-Source Framework for Symbolic Creating Bicycle-Rider Models"
readme = "README.md"
requires-python = ">=3.10"
license = "CC0-1.0"

dependencies = [
    "sympy >=1.12",
    "numpy",
]

[project.optional-dependencies]
plot = [
    "symmeplot >=0.2",
]
param = [
    "bicycleparameters >=1.2",
]
lint = [
    "ruff >= 0.6.9, <0.7",
    "pre-commit >=4.0.1",
]
test = [
    "pytest >=9",
    "pytest-mock >= 3.15",
    "coverage[toml] >=7.13.1",
    "pytest-cov >=7.0.0",
    "pytest-benchmark >=5.2.3",
    "pytest-mock >=3.15.1",
    "pytest-xdist >=3.8.0",
]
docs = [
    "sphinx >=8,<9",
    "furo >=2025.12.19",
    "sphinxcontrib-bibtex >=2.6.5",
    "nbsphinx >=0.9.8",
    "rpds-py >=0.30.0",
    "ipykernel >=7.1.0",
    "nbstripout >=0.9",
]

[project.urls]
"Homepage" = "https://github.com/mechmotum/symbrim"
"Bug Tracker" = "https://github.com/mechmotum/symbrim/issues"
"Documentation" = "https://mechmotum.github.io/symbrim/"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/symbrim/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"

[tool.ruff]
target-version = "py39"
line-length = 88
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # trailing comma missing
    "C901",  # function is too complex
    "D105",  # missing docstring in magic method
    "D203",  # 1 blank line required before class docstring
    "D213",  # multi-line docstring summary should start at the second line
    "EM",  # exception must not use a string literal
    "FBT",  # boolean-typed positional argument
    "PLR0913",  # too many arguments in function definition
    "PLR2004",  # magic value used in comparison
    "SLF001",  # private member accessed
    "TRY003",  # avoid specifying long messages outside the exception class
]
output-format = "full"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",  # annotations
    "ARG002",  # unused method argument (occurs frequently due to fixtures/parametrize)
    "D",  # documentation
    "PT011",  # `pytest.raises(...)` is too broad, set the `match` parameter or use a more specific exception
    "SLF001",  # private member accessed
    "S101",  # use of `assert` detected
]
"benchmarks/*" = [
    "ANN",  # annotations
    "D",  # documentation
    "INP001",  # part of an implicit namespace package
    "S101",  # use of `assert` detected
]
"docs/*" = [
    "INP001",  # part of an implicit namespace package
    "S101",  # use of `assert` detected
    "S603", "S607",  # `subprocess` call
]
"docs/tutorials/*" = [
    "E501",  # line too long
    "ERA001",  # commented out code as example
    "ARG005",  # unused lambda argument
    "E731",  # do not assign a `lambda` expression, use a `def`
    "F401", "F811",  # unused imports to help users
    "F403", "F405",  # related to star import
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true  # Enable reformatting of code snippets in docstrings.

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (skipped by default, run with '-m slow' or '--run-all')",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["symbrim"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "with contextlib.suppress.ImportError.:",
    "def get_param_values",
    "def set_plot_objects",
    "@overload",
    ":\\s*\\.\\.\\.\\s*$"
]
omit = [
    "src/symbrim/utilities/benchmarking.py",
    "src/symbrim/utilities/parametrize.py",
    "src/symbrim/utilities/plotting.py",
    "src/symbrim/utilities/testing.py"
]
